--- a/Learning CSS Grid/styles.css
+++ b/Learning CSS Grid/styles.css
@@ -3,7 +3,7 @@ body{
     text-align: center;
 }
 .layout{
-    width: 1200px;
+    width: 80%;
     height: 600px;
     margin: 0 auto;
     /* Definir el grid layput */
