--- a/Learning CSS Grid/styles.css
+++ b/Learning CSS Grid/styles.css
@@ -16,8 +16,8 @@ body{
         "cabecera cabecera cabecera cabecera cabecera"
         "menu menu menu menu menu"
         "lateral contenido contenido contenido contenido"
-        "lateral pie pie pie pie";
-
+        "pie pie pie pie pie";
+    grid-gap:20px;
     width: 75%;
     height: 1000px;
     margin: 0 auto;
