--- a/Learning Bootstrap/styles.css
+++ b/Learning Bootstrap/styles.css
@@ -34,3 +34,12 @@ footer{
         height: auto;
     }
 }
+
+#slider{
+    max-height: 450px;
+    overflow: hidden;
+}
+
+#slider img{
+    height: 450px;
+}
